# avg-file-size

./: Cargo.toml  README.md
src/: main.rs
