[package]
name = "avg-file-size"
version = "0.1.0"
authors = ["Connor Byrnes"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
pretty-bytes = "0.2.2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
